@@ -157,7 +157,7 @@ whitelist_externals = echo
 basepython = py39: python3.9
 deps =
     echo
-    black>=19.3b0
+    black>=20.8b1
     -r requirements.txt
     #    isort>=4.3.20
 commands =
